@@ -1,3 +1,8 @@
+2008-02-12  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * plugins/mosaic/ccm-mosaic.c: Fix coords calc on mouse event.
+    * src/ccm-pixmap-glitz.c: Set surface matrix scale = -1, y offset = height.
+
 2008-02-10  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-drawable.c:
